--- a/rails/test/fixtures/taggings.yml
+++ b/rails/test/fixtures/taggings.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  bookmark_id: 
-  tag_id: 
+  bookmark_id: 1
+  tag_id: 1
 
 two:
-  bookmark_id: 
-  tag_id: 
+  bookmark_id: 2
+  tag_id: 2
