--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -43,6 +43,8 @@ group :development, :test do
   gem 'spring'
 
   gem 'rspec-rails'
+
+  gem 'factory_girl_rails'
 end
 
 gem 'bootstrap-sass', '~> 3.3.5'
