--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -45,6 +45,7 @@ group :development, :test do
   gem 'rspec-rails'
 
   gem 'factory_girl_rails'
+
 end
 
 gem 'bootstrap-sass', '~> 3.3.5'
@@ -58,4 +59,7 @@ group :development do
   gem 'hirb-unicode'
 
   gem 'letter_opener'
+
 end
+
+gem 'addressable'
